# mate-rov-2024

./: .gitignore  Cargo.toml  README.md  deploy.sh  detect_cameras.sh  robot.md  rpi-runner.sh  run.sh  setup_camera.sh  shell.nix
.cargo/: config.toml
common/: Cargo.toml
common/src/: adapters.rs  bundles.rs  change_detection.rs  components.rs  ctrlc.rs  ecs_sync.rs  error.rs  events.rs  lib.rs  over_run.rs  protocol.rs  reflect.rs  sync.rs  token.rs  types.rs
common/src/adapters/: dynamic.rs  serde.rs
common/src/ecs_sync/: apply_changes.rs  detect_changes.rs
common/src/types/: hw.rs  sensors.rs  system.rs  units.rs  utils.rs
motor_math/: Cargo.toml
motor_math/src/: blue_rov.rs  lib.rs  motor_preformance.rs  motor_relations.rs  solve.rs  utils.rs  x3d.rs
motor_math/src/solve/: forward.rs  reverse.rs
networking/: Cargo.toml
networking/examples/: networking.rs
networking/src/: acceptor.rs  buf.rs  error.rs  header.rs  lib.rs  peer.rs  raw.rs  worker.rs
networking/tests/: networking.rs
robot/: Cargo.toml  build.rs  forward_motor_data.csv  motor_data.csv  reverse_motor_data.csv  robot.toml
robot/src/: config.rs  main.rs  peripheral.rs  plugins.rs  tracy.rs
robot/src/peripheral/: ads1115.rs  icm20602.rs  mmc5983.rs  motor.rs  ms5937.rs  neopixel.rs  pca9685.rs
robot/src/plugins/: actuators.rs  cameras.rs  core.rs  ctrlc.rs  depth.rs  hw_stat.rs  leak.rs  monitor.rs  movement.rs  orientation.rs  sensors.rs  sync.rs
robot/src/plugins/actuators/: depth_hold.rs  leds.rs  motor_math.rs  motor_setup.rs  pwm.rs  servo.rs  stabilize.rs  thruster.rs
robot/src/plugins/core/: error.rs  robot.rs  state.rs  sync.rs
robot/src/plugins/monitor/: hw_stat.rs  voltage.rs
robot/src/plugins/sensors/: cameras.rs  depth.rs  leak.rs  orientation.rs  power.rs
runner-rpi/: Cargo.toml
runner-rpi/src/: main.rs
surface/: Cargo.toml
surface/src/: attitude.rs  input.rs  main.rs  surface.rs  ui.rs  video_display.rs  video_display_2d.rs  video_display_2d_master.rs  video_display_2d_tile.rs  video_display_3d.rs  video_pipelines.rs  video_stream.rs  xr.rs
surface/src/video_pipelines/: edges.rs  marker.rs  measure.rs  save.rs  scale.rs  serial.rs  squares.rs  undistort.rs
