[workspace]
resolver = "2"
members = [
    "robot",
    # "surface",
    "runner-rpi"
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
