[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
motor_math = { path = "../motor_math" }

networking = { path = "../networking" }
glam = { version = "0.24", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
bincode = "1"

anyhow = "1"
thiserror = "1"
tracing = "0.1"

rand = "0.8"
ahash = "0.8"

bevy_app = "0.12"
bevy_ecs = "0.12"
