[package]
name = "robot"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
networking = { path = "../networking" }
motor_math = { path = "../motor_math" }

bevy = { version = "0.12" , default-features = false, features = ["multi-threaded"] }

tracing = "0.1"
tracing-subscriber = "0.3"

rppal = { version = "0.15", features = ["hal"] }
rgb = "0.8"

sysinfo = { version = "0.29", default-features = false }

ahrs = { git = "https://github.com/jmagnuson/ahrs-rs.git" }
nalgebra = { version = "0.32", features = ["convert-glam024"] }
glam = { version = "0.24", features = ["serde"] }

anyhow = "1"
serde = { version = "1", features = ["derive"]}
toml = "0.8"
crossbeam = "0.8"
ahash = "0.8"
tracy-client = "0.16"
